--- a/configure.ac
+++ b/configure.ac
@@ -40,7 +40,7 @@ dnl ---------------------------------------------------------------------------
 dnl ---------------------------------------------------------------------------
 dnl check for GTK
 dnl ---------------------------------------------------------------------------
-AM_PATH_GTK_2_0(2.12.0)
+AM_PATH_GTK_2_0([2.12.0])
 
 dnl ---------------------------------------------------------------------------
 dnl enable GUI/console type checking
