--- a/trunk/.gitignore
+++ b/trunk/.gitignore
@@ -16,6 +16,7 @@ po/en@boldquot.insert-header
 po/en@boldquot.po
 po/en@quot.insert-header
 po/en@quot.po
+po/remove-potcdate.sed
 po/stamp-po
 *.gmo
 *.[oa]
