Install gassoc and consfile to SYSCONFDIR.
Since these files are customizable by the sysadmin, they are better
installed to sysconfdir.

Reorganize a bit Makefile.am, but the only real change is the location
of the files.

Record this change in the Changelog. This is the real 0.9.3 release. Lucky
me had not tagged anything in svn or uploaded a tarball yet.

--- a/Makefile.am
+++ b/Makefile.am
@@ -1,14 +1,19 @@
 AUTOMAKE_OPTIONS=no-dependencies
 SUBDIRS = po intl
+
 localedir=$(datadir)/locale
+
+AM_CFLAGS = -DLOCALEDIR=\""$(localedir)"\" -DSYSCONFDIR=\""$(sysconfdir)"\" $(GTK_CFLAGS)
+AM_LDFLAGS= -Wl,--as-needed -Wl,-z -Wl,defs
+
 bin_PROGRAMS = grun
 grun_SOURCES = grun.c 
-man_MANS = grun.1x
-EXTRA_DIST = config.rpath m4/ChangeLog BUGS README INSTALL AUTHORS COPYING NEWS TODO grun.1x grun2.xpm consfile gassoc
-AM_CFLAGS = -DLOCALEDIR=\""$(localedir)"\" -DDATADIR=\""$(datadir)"\" $(GTK_CFLAGS)
-AM_LDFLAGS= -Wl,--as-needed -Wl,-z -Wl,defs
 grun_LDADD = $(INTLLIBS) $(GTK_LIBS)
-grundatadir = $(datadir)/grun
-grundata_DATA = gassoc consfile
+
+dist_man_MANS = grun.1x
+
+dist_sysconf_DATA = gassoc consfile
+
+EXTRA_DIST = config.rpath m4/ChangeLog BUGS README INSTALL AUTHORS COPYING NEWS TODO grun2.xpm
 
 ACLOCAL_AMFLAGS = -I m4
